--- a/inde.html
+++ b/inde.html
@@ -8,6 +8,23 @@
     <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
+      <style>
+        .we-coders-wrapper {
+            text-align: center;
+        }
+        .we-coders {
+            color: blue; /* Set text color to blue */
+            font-weight: bold; /* Make text bold */
+            font-size: 24px; /* Set font size to 24 pixels */
+        }
+        hr {
+            width: 80%; /* Set the width of the horizontal line to 80% of the container */
+            margin: auto; /* Center the horizontal line */
+            border: none; /* Remove default border */
+            height: 2px; /* Set the height of the horizontal line */
+            background-color: #333; /* Set the background color to dark */
+        }
+    </style>
 </head>
 
 <body>
